# no-dice

./: .gitignore  .travis.yml  Makefile.am  README  README.rst  TODO  bootstrap  configure.ac
assets/: Makefile.am  intro-fragment.glsl  intro-vertex.glsl
boilerplate/: cpp  h
debian/: .gitignore  changelog  control  menu  no-dice.install  rules
include/vmmlib/: frustum.h  matrix3.h  matrix4.h  quaternion.h  stringUtils.h  vector2.h  vector3.h  vector4.h
nodice/: Makefile.am  app.cpp  app.h  board.cpp  board.h  colour.cpp  colour.h  config.cpp  config.h  d12.cpp  d12.h  d20.cpp  d20.h  d4.cpp  d4.h  d6.cpp  d6.h  d8.cpp  d8.h  font.cpp  font.h  fontcache.cpp  fontcache.h  gamestate.cpp  gamestate.h  introstate.cpp  introstate.h  main.cpp  maths.h  mesh.cpp  mesh.h  object.cpp  object.h  opengl.cpp  opengl.h  openglmesh.cpp  openglmesh.h  openglshaderpipeline.cpp  openglshaderpipeline.h  opengltexture.cpp  (+30 more)
src/: Makefile.am  main.cpp  opengl.h
src/nodice/: app.cpp  app.h  config.cpp  font.cpp  font.h  fontcache.cpp  fontcache.h  object.cpp  object.h  shape.cpp  shape.h  video.cpp  video.h  videocontext.h  videocontextsdl.cpp  videocontextsdl.h
templates/: cpp  h
tests/: Makefile.am  test-no-dice.cpp  test_config.cpp  test_mesh.cpp  test_renderable.cpp
windows/: .gitignore  .gitognore  README.windows  no-dice.vcproj  nodice_config.h
windows/no-dice/: no-dice.sln  no-dice.vcproj
